adjusted spacing and correctly applied width to cards

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -30,6 +30,14 @@ a {
     border-radius: 5px;
 }
 
+.title-font {
+    font-family: 'Vidaloka', serif;
+}
+
 .title_spacing {
     letter-spacing: 5px;
+}
+
+.width-100 {
+    width: 100%;
 }
